--- a/reusable-table/src/app/data/data.component.html
+++ b/reusable-table/src/app/data/data.component.html
@@ -1,11 +1,15 @@
-<div>
-  <h1>{{title}}</h1>
+<div class="container">
+  <div class="jumbotron">
+      <h1>{{title}}</h1>
+    </div>
 </div>
-<app-table-data-representation
-[data]="data" 
-[Columnsdata]="Columnsdata" 
-[sorting]="true"
-[search] = 'true'
->
 
+
+<app-table-data-representation
+[data]="data"
+[Columnsdata]="Columnsdata"
+[sorting]="true"
+[search] = "true"
+>
 </app-table-data-representation>
+
