--- a/reusable-table/src/app/table-data/table-data-representation/table-data-representation.component.html
+++ b/reusable-table/src/app/table-data/table-data-representation/table-data-representation.component.html
@@ -1,40 +1,54 @@
 
+
 <div *ngIf='search==true'>
    <!-- <app-table-search [result]='value'></app-table-search>  -->
    <label>
     Type something :
   </label>
-  
-   <input  type="text" 
-          placeholder="data"
-          (change)='searchedTextChanged($event,$event.target.value)'            
-   > 
+
+  <input id='text' [(ngModel)]="searchText" placeholder="search text goes here" >
+  <!-- <input [(ngModel)]="searchText" placeholder="search text goes here" > -->
+   <!-- (change)='searchedTextChanged($event,$event.target.value)' -->
+
 </div>
 
-<div> 
-  <table style="width:80%">
+<div  class ="container">
+<div class="table-responsive" >
+  <table style="width:100%">
     <thead>
       <tr id="t_head">
-        <th *ngFor="let col of Columnsdata">              
+        <th *ngFor="let col of Columnsdata">
           {{col.value}}
           <div *ngIf='sorting==true' >
+              <a><mat-icon (click)='sortingMethod(col.attribute)'>arrow_drop_up</mat-icon></a>
+          
+
+
              <!-- <app-table-sort (click)='onclick($event,col.attribute)'></app-table-sort> -->
-              <button class='btn btn-primary'  (click)='sortingMethod(col.attribute)'>
-                <i><span class="glyphicon glyphicon-arrow-up"></span>sort</i>
-            </button> 
+              <!-- <button class='btn btn-primary'  (click)='sortingMethod(col.attribute)'> -->
+                <!-- <i><span class="glyphicon glyphicon-arrow-up"></span>sort</i> -->
+                <!-- <div *ngIf='ascending == 1; then uporder else downorder '  ></div> -->
+                   <!-- <ng-template #uporder>
+                   </ng-template>
+                   <ng-template #downorder>
+                    <mat-icon>arrow_drop_down</mat-icon>
+                   </ng-template>                                                         -->
+            <!-- </button>  -->
           </div>
           </th>
       </tr>
-      
-    </thead>
-    <tbody>
-     
-      <tr *ngFor="let row of items">
-        <td *ngFor="let col of Columnsdata ">
-          {{row[col.attribute]}}
 
+    </thead>
+    <tbody >
+      <tr  *ngFor="let row of data | searchPipe: searchText | doc: searchText">
+        <td *ngFor="let col of Columnsdata  ">
+          {{row[col.attribute]}}
+            <!-- <div innerHTML="{{row[col.attribute] | textHighlight: searchText :'highlight'}}"></div> -->
+          
         </td>
       </tr>
     </tbody>
   </table>
 </div>
+</div>
+
