--- a/reusable-table/src/styles.css
+++ b/reusable-table/src/styles.css
@@ -1,2 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'https://fonts.googleapis.com/icon?family=Material+Icons';
 @import '~bootstrap/dist/css/bootstrap.min.css';
+
+
+.highlight {
+  background-color: yellow;
+ }
+tr.highlight{
+  background-color: yellow;
+}
+ span.highlight{
+   background-color:yellow;
+   padding:3px;
+  }
